# django-ai-chatbot

./: .gitignore  README.md  db.sqlite3  pyproject.toml
chatbot/: urls.py  views.py
chatbot_project/: settings.py  urls.py
static/chatbot/css/: chatbot-style.css  custom-bs-style.css
templates/chatbot/: base.html  index.html
